--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title></title>
+    <title>dbt</title>
 
 
     <!-- compiled css output -->
@@ -17,15 +17,20 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <!-- gets the contact data, id and username-->
+    <script src="js/controllers/contactController.js"></script>
+    <script src="js/controllers/communcationController.js"></script>
+    <script src="js/services/contactService.js"></script>
+    
   </head>
-  <body ng-app="starter">
-
-    <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
-      </ion-header-bar>
-      <ion-content>
-      </ion-content>
-    </ion-pane>
+  <body ng-app="dbt">
+    <ion-nav-bar>
+      <ion-nav-back-button class="button-clear">
+        <i class="ion-arrow-left-c"></i> Back
+      </ion-nav-back-button>
+    </ion-nav-bar>
+    
+    <ion-nav-view>
+    </ion-nav-view>
   </body>
 </html>
